--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <style>
         *{
             background-color: rgb(14, 14, 14);
+            background-image:url(./21310607.jpg);
+            background-size: 100%;
+            /* background-position: center; */
         }
     </style>
     <script src='arcanine.js' type="module"></script>
